stop pipe shifting

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -915,6 +915,11 @@ body.storm {
 }
 
 
+ol {
+  height: 865px;
+  overflow: hidden;
+}
+
 // body {
 //   background: red !important;
 // }
